<resources>
    <string name="app_name">AstroCure</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_1">Embracing an adventurous mindset can lead to exciting discoveries about yourself and others. Engage in activities that challenge your intellect, broaden your knowledge, and push your boundaries. Explore new hobbies, or delve into subjects that pique your curiosity. By expanding your mental horizons, you\'ll better understand the world around you and discover hidden possibilities for love within yourself.</string>
    <string name="dummy_2">Maintain a positive mindset throughout the day. Avoid getting caught up in pessimistic thoughts or self-doubt that may undermine your progress. Focus on your strengths, achievements, and the potential that lies ahead. Cultivate gratitude and celebrate even the most minor victories along the way. This positive outlook will attract favourable opportunities and increase your motivation when faced with challenges.</string>
    <string name="dummy_3">Your life will have the fragrance of love today. You will fall in love mostly in the second half of the day. Female Scorpios may get a proposal that can change their life. Male Scorpios may meet an interesting person at a bus stop, while traveling, at an official function, restaurant, or a family gathering. Approach the girl to propose and you can be sure about the positive response. Those who are already in love can even decide about marriage today.</string>
    <string name="name_label">Name<sup><font fgcolor='#FFFF3B30'>*</font></sup></string>
    <string name="tob_label">TIME OF BIRTH<sup><font fgcolor='#FFFF3B30'>*</font></sup></string>
    <string name="dob_label">DATE OF BIRTH<sup><font fgcolor='#FFFF3B30'>*</font></sup></string>
    <string name="location_label">Location<sup><font fgcolor='#FFFF3B30'>*</font></sup></string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="fortune_cookie"><font fgcolor='#ffffff'>FORTUNE</font> <font fgcolor='#FFDB72'>COOKIE</font></string>
    <string name="color_therapy"><font fgcolor='#F0153C'>C</font><font fgcolor='#FFFFFF'>o</font><font fgcolor='#ECFF0F'>l</font><font fgcolor='#964B00'>o</font><font fgcolor='#690971'>r</font><font fgcolor='#C61FA1'> T</font><font fgcolor='#808080'>h</font><font fgcolor='#000000'>era</font><font fgcolor='#168E01'>py</font></string>
    <string name="instructions">1.Your Question must be relevant to the topic.\n2.Don\'t use an obscene or vulgar language, Including racist remarks.\n3.Do not post anything that verbally or Physically incites violence or hatred against An individual or a group of individuals.\n4.Do not advertise any products, services, etc \n5.A Message that does not comply with the rules Will be deleted.</string>
    <string name="recover_account">Do you want to Recover your Account ? <font fgcolor='#13CEC3'><u>Recover Account</u></font></string>
    <string name="create_account"><font fgcolor='#D3CB1E'>C</font>reate <font fgcolor='#D3CB1E'>A</font>ccount</string>
    <string name="terms_condition">By creating an account, you agree to our <font fgcolor='#13CEC3'>Terms &amp; Conditions</font> and <font fgcolor='#13CEC3'>Privacy policy</font>.</string>
    <string name="full_name">Full Name<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="date_of_birth">Date Of Birth<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="time_of_birth">Time Of Birth<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="email">Email<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="location">Location<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="edit_profile"><u><font fgcolor='#CBBA1E'>Edit Profile</font></u></string>
    <string name="dummy_video_text">The market expects EPS of $0.26 on the quarter, higher by 12.97% compared to the same period last year.\n\n\n1915 Buy more\nTP1 1923\nTP3 1930\nTP2 1926\nTP4 1935\nSL 1908</string>
    <string name="more">see more\n</string>
    <string name="language">Language<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="gender">Gender<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="upload_photo">Upload Photo<sup><font fgcolor='#931D1D'>*</font></sup></string>
    <string name="premium_feature_text">We provide predictions for Commodities, Movie , Stock , Sports, Miscellaneous...<font fgcolor='#05FF00'>Learn More</font></string>
    <string name="onboard_terms">By continuing, you are setting up a account and agree to our <font fgcolor='#613B9E'>User Agreement</font> and <font fgcolor='#613B9E'>Privacy Policy</font>.</string>

</resources>