<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_4"
    tools:context=".ui.CreateAccountSecondActivity">

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="Enter your name, Date of birth, Time of Birth and\nLocation."
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <EditText
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_input_unfocused"
        android:hint="@string/language"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#59FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_2" />

    <TextView
        android:id="@+id/language_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textColor="#13CEC3"
        app:layout_constraintStart_toStartOf="@id/language"
        app:layout_constraintTop_toBottomOf="@id/language" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_input_unfocused"
        android:hint="@string/gender"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#59FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_helper_text" />

    <TextView
        android:id="@+id/gender_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textColor="#13CEC3"
        app:layout_constraintStart_toStartOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_input_unfocused"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#59FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_helper_text" />

    <TextView
        android:id="@+id/email_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textColor="#13CEC3"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/camera_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/text_input_unfocused"
        android:enabled="false"
        android:hint="@string/upload_photo"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#59FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_helper_text" />

    <TextView
        android:id="@+id/camera_path_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:textColor="#13CEC3"
        app:layout_constraintStart_toStartOf="@id/camera_path"
        app:layout_constraintTop_toBottomOf="@id/camera_path" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:src="@drawable/camera_outline"
        app:layout_constraintBottom_toBottomOf="@+id/camera_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/camera_path" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/terms_condition"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toTopOf="@id/lottieAnimationView"
        app:layout_constraintVertical_bias="0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".85"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/progress_anim_3rd_stop"
        app:lottie_speed="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bg"
        android:text="Next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>