<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/call_chat_filter_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Check Alternative Horoscope"
        android:textColor="#E4AF18"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Friends and Family"
        android:textColor="#C41FC7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/name_label"
        android:textColor="#660A9C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#BF000000"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <TextView
        android:id="@+id/tob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/tob_label"
        android:textColor="#660A9C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/tob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:imeOptions="actionNext"
        android:inputType="time"
        android:padding="10dp"
        android:textColor="#BF000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tob_label" />

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/dob_label"
        android:textColor="#660A9C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/dob"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="#BF000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tob"
        app:layout_constraintTop_toBottomOf="@id/dob_label" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/location_label"
        android:textColor="#660A9C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tob" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:imeOptions="actionDone"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:textColor="#BF000000"
        app:layout_constraintTop_toBottomOf="@id/location_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_horo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/check_horo_button_bg"
        android:text="Check Horoscope"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintWidth_percent=".75" />

</androidx.constraintlayout.widget.ConstraintLayout>