<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/call_chat_filter_bg"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/round_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#7011CD" />

    <TextView
        android:id="@+id/label_change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Profile"
        android:textColor="#E4AF18"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <CheckedTextView
        android:id="@+id/select_own"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_check_box_checked"
        android:drawablePadding="5dp"
        android:text="Cameron Diaz"
        android:textColor="#660A9C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_change_profile" />

    <CheckedTextView
        android:id="@+id/select_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_check_box_unchecked"
        android:drawablePadding="5dp"
        android:text="Tom Cruise"
        android:textColor="#660A9C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_own" />

    <CheckedTextView
        android:id="@+id/select_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_check_box_unchecked"
        android:drawablePadding="5dp"
        android:text="Jennifer Lopez"
        android:textColor="#660A9C"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_second" />

    <TextView
        android:id="@+id/label_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Your Details"
        android:textColor="#E4AF18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_third" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:text="@string/name_label"
        android:textColor="#660A9C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_detail" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:enabled="false"
        android:text="Cameron Diaz"
        android:textColorHint="#7A000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/label_name" />

    <TextView
        android:id="@+id/label_tob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:text="@string/time_of_birth"
        android:textColor="#660A9C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/tob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:enabled="false"
        android:text="12:00 PM"
        android:textColorHint="#7A000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_tob" />

    <TextView
        android:id="@+id/label_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:text="@string/date_of_birth"
        android:textColor="#660A9C"
        app:layout_constraintStart_toStartOf="@id/dob"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:enabled="false"
        android:text="12 Dec 1997"
        android:textColorHint="#7A000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tob"
        app:layout_constraintTop_toBottomOf="@id/label_tob" />

    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="2dp"
        android:text="@string/location"
        android:textColor="#660A9C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tob" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/check_horo_edittext_bg"
        android:enabled="false"
        android:text="Home Sweet Home"
        android:textColorHint="#7A000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/label_location" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/set_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/check_horo_button_bg"
        android:text="Set Profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintWidth_percent=".9" />

</androidx.constraintlayout.widget.ConstraintLayout>